--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
         <h2>이벤트</h2>
         <div class="event__form">
           <div class="event__slider">
-            <img data-slide="slide1" class="event__slider-slide showing" src="/images/slide1.jpg" alt="이벤트이미지1" />
-            <img data-slide="slide2" class="event__slider-slide " src="/images/slide2.jpg" alt="이벤트이미지2" />
-            <img data-slide="slide3" class="event__slider-slide" src="/images/slide3.jpg" alt="이벤트이미지3" />
-          <img data-slide="slide4" class="event__slider-slide" src="/images/slide4.jpg" alt="이벤트이미지4" />
-          <img data-slide="slide5" class="event__slider-slide" src="/images/slide5.jpg" alt="이벤트이미지5" />
+            <img data-slide="slide1" class="event__slider-slide showing" src="./images/slide1.jpg" alt="이벤트이미지1" />
+            <img data-slide="slide2" class="event__slider-slide " src="./images/slide2.jpg" alt="이벤트이미지2" />
+            <img data-slide="slide3" class="event__slider-slide" src="./images/slide3.jpg" alt="이벤트이미지3" />
+          <img data-slide="slide4" class="event__slider-slide" src="./images/slide4.jpg" alt="이벤트이미지4" />
+          <img data-slide="slide5" class="event__slider-slide" src="./images/slide5.jpg" alt="이벤트이미지5" />
         </div>
         <div  class="slider-btn">
           <div data-dot="slide1" class="slider-dot active"></div>
